# programacion-2-pucp

./: .gitignore  README.md
Cap1/CrearBibliotecaClinica/: CMakeLists.txt
Cap1/CrearBibliotecaClinica/MisBibliotecas/: estructuras.h  funciones.cpp  funciones.h
Cap1/UsarBibliotecaClinica/: CMakeLists.txt  main.cpp
Cap1/UsarBibliotecaClinica/MisBibliotecas/: enums.h
Cap1/lab01_2025-1/Material/: Infracciones de transito.txt
Cap1/lab01_2025-2/CrearBiblioteca_Parte1/Fuentes_ Bibioteca_2025_2/: CMakeLists.txt  library.cpp
Cap1/lab01_2025-2/CrearBiblioteca_Parte1/Prueba_Biblioteca/: CMakeLists.txt  main.cpp
Cap1/lab01_2025-2_ConEjecutable/CrearBiblioteca_Parte1/FuentesBibliotecaEjecu/: CMakeLists.txt  main.cpp
Cap1/lab01_2025-2_ConEjecutable/UsarBiblioteca_Parte2/UnaAplicacionConBibEstatica/: CMakeLists.txt  funcionesAux.cpp  funcionesAux.h  main.cpp
Cap2/asig_mem_Incrementos/: CMakeLists.txt  enums.h  estructuras.h  funciones.cpp  funciones.h
Cap2/asig_mem_exacta_ej01/: CMakeLists.txt  funciones.cpp  funciones.h  main.cpp
Cap2/asig_mem_exacta_ej02/: CMakeLists.txt  funciones.cpp  funciones.h  main.cpp
Cap2/lab04_2024-2/: CMakeLists.txt  funciones.cpp  funciones.h  main.cpp
Cap2/punteros_a_funcion/ejercicio01/: main.cpp
Cap2/punteros_a_funcion/ejercicio02/: CMakeLists.txt  funciones.cpp  funciones.h  main.cpp
Cap2/punteros_a_punteros/: CMakeLists.txt  funciones.cpp  funciones.h  main.cpp
Cap2/punteros_genericos/: CMakeLists.txt  enum.h  funciones.cpp  funciones.h  main.cpp
(+7 files in other folders)
